--- a/modules/agent/azure-pipelines-prod.yml
+++ b/modules/agent/azure-pipelines-prod.yml
@@ -120,16 +120,11 @@ stages:
             displayName: "Install Supabase CLI"
 
           - script: |
-              echo "Initializing Supabase project structure..."
-              # Ensure Supabase CLI is in PATH (for self-hosted agents)
+              echo "Setting up migrations..."
               export PATH="$(Agent.ToolsDirectory)/supabase:$PATH"
 
-              # Initialize Supabase project (creates supabase/ directory)
-              # This matches the Supabase docs pattern: https://supabase.com/docs/guides/deployment/managing-environments
               supabase init || true
 
-              # Copy migrations to Supabase's expected location (supabase/migrations/)
-              # Migrations are located in modules/agent/migrations/
               mkdir -p supabase/migrations
               if [ -d "modules/agent/migrations" ]; then
                 cp -r modules/agent/migrations/*.sql supabase/migrations/ 2>/dev/null || echo "No migrations found"
@@ -139,40 +134,8 @@ stages:
                 exit 1
               fi
 
-              # Link to Supabase project (following Supabase docs pattern)
-              # Requires SUPABASE_ACCESS_TOKEN and SUPABASE_PROJECT_ID environment variables
-              echo "Linking to Supabase project..."
-
-              # Verify environment variables are set (without exposing values)
-              if [ -z "$SUPABASE_ACCESS_TOKEN" ]; then
-                echo "Error: SUPABASE_ACCESS_TOKEN is not set"
-                exit 1
-              fi
-              if [ -z "$SUPABASE_PROJECT_ID" ]; then
-                echo "Error: SUPABASE_PROJECT_ID is not set"
-                exit 1
-              fi
-              if [ -z "$SUPABASE_DB_PASSWORD" ]; then
-                echo "Error: SUPABASE_DB_PASSWORD is not set"
-                exit 1
-              fi
-
-              echo "Access token format: ${SUPABASE_ACCESS_TOKEN:0:10}... (length: ${#SUPABASE_ACCESS_TOKEN})"
-              echo "Project ref format: ${SUPABASE_PROJECT_ID:0:10}... (length: ${#SUPABASE_PROJECT_ID})"
-
-              supabase login --token "$SUPABASE_ACCESS_TOKEN"
-              supabase link --project-ref "$SUPABASE_PROJECT_ID" --password "$SUPABASE_DB_PASSWORD"
-            displayName: "Link Supabase Project"
-            env:
-              SUPABASE_ACCESS_TOKEN: $(SUPABASE_ACCESS_TOKEN)
-              SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
-              SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
-            workingDirectory: $(System.DefaultWorkingDirectory)
-
-          - script: |
-              echo "Applying database migrations..."
-              export PATH="$(Agent.ToolsDirectory)/supabase:$PATH"
-              supabase db push --db-url "postgres://postgres.${SUPABASE_PROJECT_ID}:${SUPABASE_DB_PASSWORD}@aws-0-us-east-1.pooler.supabase.com:5432/postgres"
+              echo "Applying database migrations via pooler..."
+              supabase db push --db-url "postgres://postgres.${SUPABASE_PROJECT_ID}:${SUPABASE_DB_PASSWORD}@aws-0-us-east-1.pooler.supabase.com:6543/postgres"
             displayName: "Push Migrations to Supabase"
             continueOnError: false
             workingDirectory: $(System.DefaultWorkingDirectory)
