--- a/modules/agent/azure-pipelines-test.yml
+++ b/modules/agent/azure-pipelines-test.yml
@@ -127,6 +127,39 @@ stages:
               SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
               SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
 
+          - script: |
+              echo "Running database seeders..."
+              export PGPASSWORD="${SUPABASE_DB_PASSWORD}"
+              DB_URL="postgres://postgres.${SUPABASE_PROJECT_ID}@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
+
+              # Create seeders tracking table
+              psql "$DB_URL" -c "CREATE TABLE IF NOT EXISTS supabase_migrations.seed_files (name TEXT PRIMARY KEY, applied_at TIMESTAMP DEFAULT NOW());"
+
+              # Run each seeder file if not already applied
+              if [ -d "modules/agent/seeders" ]; then
+                for seeder in $(ls modules/agent/seeders/*.sql 2>/dev/null | sort); do
+                  seeder_name=$(basename "$seeder")
+                  # Check if already applied
+                  already_applied=$(psql "$DB_URL" -t -c "SELECT 1 FROM supabase_migrations.seed_files WHERE name = '$seeder_name' LIMIT 1;" | tr -d ' ')
+                  if [ "$already_applied" != "1" ]; then
+                    echo "Running seeder: $seeder_name"
+                    psql "$DB_URL" -f "$seeder"
+                    psql "$DB_URL" -c "INSERT INTO supabase_migrations.seed_files (name) VALUES ('$seeder_name');"
+                  else
+                    echo "Skipping seeder (already applied): $seeder_name"
+                  fi
+                done
+                echo "✓ Seeders complete"
+              else
+                echo "⚠️  No seeders directory found"
+              fi
+            displayName: "Run Database Seeders"
+            continueOnError: false
+            workingDirectory: $(System.DefaultWorkingDirectory)
+            env:
+              SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
+              SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
+
   - stage: Push
     displayName: Push Docker Image to GHCR
     dependsOn: Migrate
