--- a/modules/agent/azure-pipelines-test.yml
+++ b/modules/agent/azure-pipelines-test.yml
@@ -128,6 +128,12 @@ stages:
               SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
 
           - script: |
+              # Skip seeders if RUN_SEEDERS is explicitly false
+              if [ "$RUN_SEEDERS" = "false" ]; then
+                echo "⏭️  Skipping seeders (RUN_SEEDERS=false)"
+                exit 0
+              fi
+
               echo "Running database seeders..."
               export PGPASSWORD="${SUPABASE_DB_PASSWORD}"
               DB_URL="postgres://postgres.${SUPABASE_PROJECT_ID}@aws-1-us-east-1.pooler.supabase.com:5432/postgres"
@@ -157,6 +163,7 @@ stages:
             continueOnError: false
             workingDirectory: $(System.DefaultWorkingDirectory)
             env:
+              RUN_SEEDERS: $(RUN_SEEDERS)
               SUPABASE_DB_PASSWORD: $(SUPABASE_DB_PASSWORD)
               SUPABASE_PROJECT_ID: $(SUPABASE_PROJECT_ID)
 
