--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -7,7 +7,9 @@
     "build": "next build",
     "start": "next start -p 80",
     "test": "jest --watchAll",
-    "test:ci": "jest --ci --reporters=jest-junit --coverage --passWithNoTests"
+    "test:ci": "jest --ci --reporters=jest-junit --coverage --passWithNoTests",
+    "format": "prettier --write .",
+    "format:check": "prettier --check ."
   },
   "dependencies": {
     "@auth0/nextjs-auth0": "^4.6.0",
@@ -31,6 +33,7 @@
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
+    "prettier": "^3.7.4",
     "supabase": ">=1.8.1",
     "tailwindcss": "^4"
   }
