--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,13 @@ services:
       done &
       docker logs -f pina_colada-postgres-1 2>&1 | while IFS= read -r line; do
         DATE=$$(date +%Y-%m-%d)
-        echo "[postgres] $$line" >> /logs/postgres-$$DATE.log
-        echo "[postgres] $$line" >> /logs/docker-compose-$$DATE.log
+        echo "[langfuse-postgres] $$line" >> /logs/langfuse-postgres-$$DATE.log
+        echo "[langfuse-postgres] $$line" >> /logs/docker-compose-$$DATE.log
+      done &
+      docker logs -f pina_colada-app-postgres-1 2>&1 | while IFS= read -r line; do
+        DATE=$$(date +%Y-%m-%d)
+        echo "[app-postgres] $$line" >> /logs/app-postgres-$$DATE.log
+        echo "[app-postgres] $$line" >> /logs/docker-compose-$$DATE.log
       done &
       wait
       '
@@ -32,6 +37,7 @@ services:
       - client
       - agent
       - postgres
+      - app-postgres
 
   client:
     build:
@@ -46,13 +52,13 @@ services:
       - ./modules/client/.env.local
     environment:
       # Postgres connection for local dev (when USE_LOCAL_POSTGRES=true)
-      POSTGRES_HOST: postgres
+      POSTGRES_HOST: app-postgres
       POSTGRES_PORT: 5432
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
       POSTGRES_DB: ${COMPOSE_PROJECT_NAME:-pina_colada}
     depends_on:
-      postgres:
+      app-postgres:
         condition: service_healthy
     command: ["npm", "run", "dev"] # overrides Dockerfile start command in dev env
     restart: always
@@ -89,6 +95,9 @@ services:
     ports:
       - "2024:2024" # LangGraph API to host
       - "8000:8000" # FastAPI server.py
+    depends_on:
+      app-postgres:
+        condition: service_healthy
     logging:
       driver: "json-file"
       options:
@@ -250,25 +259,49 @@ services:
     environment:
       POSTGRES_USER: ${POSTGRES_USER:-postgres}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres} # CHANGEME
-      POSTGRES_DB: ${COMPOSE_PROJECT_NAME:-postgres}  # Default DB for Langfuse
+      POSTGRES_DB: langfuse
       TZ: UTC
       PGTZ: UTC
     ports:
-      - 127.0.0.1:5432:5432
+      - 127.0.0.1:5433:5432
     volumes:
       - langfuse_postgres_data:/var/lib/postgresql/data
-      - ./docker/postgres-init:/docker-entrypoint-initdb.d:ro
     logging:
       driver: "json-file"
       options:
         max-size: "10m"
         max-file: "3"
-    # This Postgres instance hosts multiple databases:
-    # - ${COMPOSE_PROJECT_NAME:-pina_colada} - Used by agent/client (created via POSTGRES_DB)
-    # - langfuse - Used by Langfuse (created via init script)
-    # No collision: Each database is isolated, same Postgres instance
+    # Langfuse-only Postgres instance
+
+  app-postgres:
+    image: docker.io/postgres:${POSTGRES_VERSION:-17}
+    restart: always
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 3s
+      timeout: 3s
+      retries: 10
+    environment:
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres} # CHANGEME
+      POSTGRES_DB: ${COMPOSE_PROJECT_NAME:-pina_colada}
+      TZ: UTC
+      PGTZ: UTC
+    ports:
+      - 127.0.0.1:5432:5432
+    volumes:
+      - app_postgres_data:/var/lib/postgresql/data
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
+    # App-only Postgres instance (pina_colada database)
 
 volumes:
+  app_postgres_data:
+    name: ${COMPOSE_PROJECT_NAME}_app_postgres_data
+    driver: local
   langfuse_postgres_data:
     name: ${COMPOSE_PROJECT_NAME}_langfuse_postgres_data
     driver: local
