--- a/modules/agent/pyproject.toml
+++ b/modules/agent/pyproject.toml
@@ -81,6 +81,8 @@ testpaths = ["src", "tests"]
 python_files = ["test_*.py", "*_test.py"]
 python_classes = ["Test*"]
 python_functions = ["test_*"]
+asyncio_mode = "auto"
+asyncio_default_fixture_loop_scope = "function"
 
 [dependency-groups]
 dev = [
