--- a/modules/agent/.env.example
+++ b/modules/agent/.env.example
@@ -43,3 +43,9 @@ AUTH0_AUDIENCE="http://localhost:8000"
 
 # Verbose error logging (development only)
 VERBOSE_ERROR_LOGS=true
+
+# Provider Admin API Keys (for cost tracking)
+# OpenAI: Get from https://platform.openai.com/settings/organization/admin-keys
+OPENAI_ADMIN_KEY=""
+# Anthropic: Get from Claude Console (requires admin role)
+ANTHROPIC_ADMIN_KEY=""
