--- a/modules/client/package.json
+++ b/modules/client/package.json
@@ -12,18 +12,19 @@
     "format:check": "prettier --check ."
   },
   "dependencies": {
-    "@auth0/nextjs-auth0": "^4.6.0",
+    "@auth0/nextjs-auth0": "^4.14.0",
     "@mantine/core": "^7.17.8",
     "@mantine/hooks": "^7.17.8",
+    "@next/third-parties": "^16.1.1",
     "@supabase/supabase-js": "^2.39.0",
     "@uiw/react-json-view": "^2.0.0-alpha.39",
     "axios": "^1.7.9",
     "lucide-react": "^0.546.0",
-    "next": "15.5.9",
+    "next": "^16.1.1",
     "next-runtime-env": "^3.3.0",
     "pg": "^8.11.3",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.1.2",
+    "react-dom": "^19.1.2",
     "react-dropzone": "^14.3.5",
     "react-markdown": "^10.1.0",
     "remark-gfm": "^4.0.1",
@@ -33,6 +34,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.1.5",
     "@testing-library/react": "^16.3.0",
+    "baseline-browser-mapping": "^2.9.11",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "jest-junit": "^16.0.0",
